--- a/views/account/pages/activation/main.html
+++ b/views/account/pages/activation/main.html
@@ -32,29 +32,27 @@
                                 <div class="col-sm-4">
                                     <div class="text-center">
                                         <span class="glyphicon glyphicon-user" aria-hidden="true" style="font-size:4.5em;"></span>
-                                        <h4><i class="glyphicon glyphicon-ok-circle text-success"></i>Setup your Account</h4>
-                                        <br>
-
-                                        <a href="/account/activation/account" class="btn btn-success btn-sm btn-block">Do it now</a>
+                                        <h4>Setup your Account</h4>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" text-center">
                                         <span class="glyphicon glyphicon-edit" aria-hidden="true" style="font-size:4.5em;"></span>
                                         <h4>Compelete your profile</h4>
-                                        <br>
-
-                                        <a href="/account/activation/profile" class="btn btn-success btn-sm btn-block">Do it now</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="text-center">
                                         <span class="glyphicon glyphicon-share" aria-hidden="true" style="font-size:4.5em;"></span>
                                         <h4>Share Us</h4>
-                                        <br>
-
-                                        <a href="/account/activation/sharing" class="btn btn-success btn-sm btn-block">Do it now</a>
                                     </div>
+                                </div>
+                            </div>
+                            <br>
+                            <br>
+                            <div class="row margin-top-25 text-primary">
+                                <div class="col-sm-12">
+                                    <a href="/account/activation/account" class="btn btn-success btn-sm btn-block">Proceed</a>
                                 </div>
                             </div>
                         </div>
