--- a/views/account/pages/activation/main.html
+++ b/views/account/pages/activation/main.html
@@ -24,7 +24,7 @@
                                 use these points to activate the other features of the platform.
                                 <br> 
                                 <br> 
-                                By completing each step you will earn <strong>15 Points</strong> which is the minimum requirement for activation.
+                                By completing each step you will earn <strong>50 Points</strong> which is the minimum requirement for activation.
                             </p>
                             <br>
                             <br>
@@ -52,7 +52,7 @@
                             <br>
                             <div class="row margin-top-25 text-primary">
                                 <div class="col-sm-12">
-                                    <a href="/account/activation/account" class="btn btn-success btn-sm btn-block">Proceed</a>
+                                    <a href="/account/activation/account" class="btn btn-success btn-sm btn-block">Proceed...</a>
                                 </div>
                             </div>
                         </div>
