--- a/views/account/pages/activation/account.html
+++ b/views/account/pages/activation/account.html
@@ -56,6 +56,7 @@
                                 class="form-control username text-center"
                                 type="text"
                                 name="username"
+                                ng-minlength="3"
                                 ng-model="username"
                                 required="required"
                                 placeholder="@Username">
