--- a/views/account/pages/activation/profile.html
+++ b/views/account/pages/activation/profile.html
@@ -3,15 +3,21 @@
 {% block head %}
 {% parent %}
 
-<link rel="stylesheet" href="/assets/bower/bootstrap-social/bootstrap-social.css">
+<!-- <link rel="stylesheet" href="/assets/css/app/account/activation/profile.css"> -->
+<script src='/assets/js/app/account/activation/profile.js'></script>
+{% endblock %}
+
+
+{% block angularSection %}
+    ng-app="deeployer"
 {% endblock %}
 
 {% block content %}
 {% include '../../../partials/header-fix-sign-in.html' %}
 
-<div id="fh5co-about-us" data-section="who-we-are">
+<div id="fh5co-page" ng-controller="ProfileController">
     <div class="container">
-        <div class="row row-bottom-padded-lg public-section" id="who-we-are">
+        <div class="row row-bottom-padded-lg public-section">
             <div class="col-md-12 section-heading text-center">
                 <h2 class="to-animate">Profile</h2>
                 <div class="row">
@@ -23,28 +29,79 @@
                             <p>
                                 Now it's time to complete your profile in order to earn another 50 points.
                             </p>
+                            <br>
+                            <div class="col-md-6 col-md-offset-3">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input
+                                            type="text" 
+                                            class="form-control" 
+                                            placeholder="Firstname" 
+                                            ng-name="firstname">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input
+                                            type="text" 
+                                            class="form-control" 
+                                            placeholder="Lastname" 
+                                            ng-name="lastname">
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <select
+                                            class="form-control" 
+                                            ng-name="gender"
+                                        >
+                                            <option value="male">Male</option>
+                                            <option value="female">Female</option>
+                                            <option value="other">Other</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <span>{{ geoLocationSpan }}</span>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <select
+                                            class="form-control" 
+                                            ng-name="country"
+                                        >
+                                            <option value="United State" country-code="+1">United State (+1)</option>
+                                            <option value="Thailand" country-code="+66">Thailand (+66)</option>
+                                            <option value="Hungary" country-code="+36">Hungary (+36)</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input 
+                                            type="text" 
+                                            class="form-control" 
+                                            placeholder="Phone Number" 
+                                            ng-name="phone">
+                                    </div>
+                                </div>
 
-                            <br>
-                            <input
-                                class="form-control username text-center"
-                                type="text"
-                                name="username"
-                                ng-minlength="3"
-                                ng-model="username"
-                                required="required"
-                                placeholder="@Username">
-                            <br>
-                            <a
-                                href="/account/activation"
-                                class="btn btn-primary backButton">
-                                Back
-                            </a>
-                            <button
-                                ng-disabled="!profileForm.$valid"
-                                type="submit"
-                                class="btn btn-success submitButton">
-                                +5 Points
-                            </button>
+                                <div class="clearfix"></div>
+
+                                <a
+                                    href="/account/activation"
+                                    class="btn btn-primary backButton">
+                                    Back
+                                </a>
+                                <button
+                                    ng-disabled="!profileForm.$valid"
+                                    type="submit"
+                                    class="btn btn-success submitButton">
+                                    +50 Points
+                                </button>
+                            </div>
                         </div>
                     </form>
                 </div>
