profile store data

--- a/views/account/pages/activation/main.html
+++ b/views/account/pages/activation/main.html
@@ -13,12 +13,12 @@
     <div class="container">
         <div class="row row-bottom-padded-lg public-section" id="who-we-are">
             <div class="col-md-12 section-heading text-center">
-                <h2 class="to-animate">Welcome to Deeployer</h2>
+                <h2>Welcome to Deeployer</h2>
                 <br>
                 <div class="row">
-                    <div class="col-md-12 to-animate">
+                    <div class="col-md-12">
                         <div class="col-sm-8 col-sm-offset-2">
-                            <p class="to-animate text-justify">
+                            <p class="text-justify">
                                 Dear user, thanks for using our platform to grow the communities, and execute your dreams.<br>
                                 In order to go further, you need to pass <strong>Three steps</strong> which each one has <strong>5 points</strong> for you and in the future you can 
                                 use these points to activate the other features of the platform.
