--- a/views/account/pages/activation/sharing.html
+++ b/views/account/pages/activation/sharing.html
@@ -9,13 +9,13 @@
 {% block content %}
 {% include '../../../partials/header-fix-sign-in.html' %}
 
-<div id="fh5co-about-us" data-section="who-we-are">
+<div id="fh5co-page">
     <div class="container">
-        <div class="row row-bottom-padded-lg public-section" id="who-we-are">
+        <div class="row row-bottom-padded-lg public-section">
             <div class="col-md-12 section-heading text-center">
-                <h2 class="to-animate">Sharing</h2>
+                <h2>Sharing</h2>
                 <div class="row">
-                    <div class="col-md-12 to-animate">
+                    <div class="col-md-12">
                         <h3>
                         </h3>
                         <br>
