--- a/views/account/pages/activation/sharing.html
+++ b/views/account/pages/activation/sharing.html
@@ -2,14 +2,17 @@
 
 {% block head %}
 {% parent %}
+<script src='/assets/js/app/account/activation/sharing.js'></script>
+{% endblock %}
 
-<link rel="stylesheet" href="/assets/bower/bootstrap-social/bootstrap-social.css">
+{% block angularSection %}
+    ng-app="deeployer"
 {% endblock %}
 
 {% block content %}
 {% include '../../../partials/header-fix-sign-in.html' %}
 
-<div id="fh5co-page">
+<div id="fh5co-page" ng-controller="SharingController">
     <div class="container">
         <div class="row row-bottom-padded-lg public-section">
             <div class="col-md-12 section-heading text-center">
