--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -16,6 +16,9 @@
     <link rel="shortcut icon" href="/assets/images/favicon.ico">
 
     <script src='/assets/js/app/main.js'></script>
+    <script>
+        window.apiTokensFacebook = '1705099903112763';
+    </script>
     {% include '../partials/head.html' %}
     {% block head %}
     {% endblock %}
