--- a/views/account/pages/activation/sharing.html
+++ b/views/account/pages/activation/sharing.html
@@ -4,6 +4,8 @@
 {% parent %}
 <link rel="stylesheet" href="/assets/bower/bootstrap-social/bootstrap-social.css">
 <script src='/assets/js/app/account/activation/sharing.js'></script>
+
+{% include '../../../partials/facebook-sdk.html' %}
 {% endblock %}
 
 {% block angularSection %}
@@ -19,35 +21,37 @@
                 <h2>Sharing</h2>
                 <br>
                 <div class="row">
-                    <form name="sharingForm" ng-submit="submitForm(sharingForm)" role="form" novalidate>
+                    <form name="sharingForm" role="form" novalidate>
                         <div class="col-md-12">
                             <p class="text-success">
                                 Congratulation <strong>[[ user.username | title ]]</strong>, you just earned <strong>+50</strong> points by completing your profile.<br>
                                 Your current points : <strong>+100</strong> points
                             </p>
                             <p>
-                                This is the final step and easy one.<br>
+                                in order to activate your account. you need to agree upon the platform's l
                                 you need to share our website on one of the social networks below in order to activate your account.
                             </p>
                             <br>
 
                             <div class="col-md-4 col-md-offset-4">
-                                <button class="btn btn-block btn-social btn-facebook">
+                                <button ng-click="facebookSharing()" class="btn btn-block btn-social btn-facebook">
                                     <span class="fa fa-facebook"></span>
                                     Share on Facebook
                                 </button>
-                                <button class="btn btn-block btn-social btn-twitter">
+                                <!-- 
+                                <button ng-click="twitterSharing()" class="btn btn-block btn-social btn-twitter">
                                     <span class="fa fa-twitter"></span>
                                     Share on Twitter
                                 </button>
-                                <!-- <button class="btn btn-block btn-social btn-google">
+                                <button ng-click="googleSharing()" class="btn btn-block btn-social btn-google">
                                     <span class="fa fa-google"></span>
                                     Share on Google plus
                                 </button>
-                                <button class="btn btn-block btn-social btn-linkedin">
+                                <button ng-click="linkedinSharing()" class="btn btn-block btn-social btn-linkedin">
                                     <span class="fa fa-linkedin"></span>
                                     Share on Linkedin
-                                </button> -->
+                                </button> 
+                                -->
                             </div>
                         </div>
                     </form>
