--- a/views/account/pages/activation/sharing.html
+++ b/views/account/pages/activation/sharing.html
@@ -56,6 +56,7 @@
                             <br>
 
                             <div class="col-md-6 col-md-offset-3">
+                                <p ng-show="message">{{ message }}<p>
                                 <a href="/terms-and-conditions">Read the Terms and conditions</a>
                                 <button
                                     ng-click="agreeWithConditions()"
