add static pages

--- a/views/partials/header-fix-sign-in-menu.html
+++ b/views/partials/header-fix-sign-in-menu.html
@@ -222,6 +222,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="/support">
+                                        <i class="glyphicon glyphicon-cog"></i> Support
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="/account/sign-out">
                                         <i class="glyphicon glyphicon-log-out"></i> Sign out
                                     </a>
