--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -18,10 +18,10 @@
                         <a href="/" data-nav-section="home"><span>Home</span></a>
                     </li>
                     <li>
-                        <a href="/static/who-we-are" data-nav-section="who-we-are"><span>Who we are</span></a>
+                        <a href="#" data-nav-section="who-we-are"><span>Who we are</span></a>
                     </li>
                     <li>
-                        <a href="/static/service-features" data-nav-section="services-features"><span>Services / Features</span></a>
+                        <a href="/services-features" data-nav-section="services-features"><span>Services / Features</span></a>
                     </li>
                     <li>
                         <a href="/blog"><span>Blog</span></a>
