--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -3,9 +3,9 @@
         <div class="col-md-12">
             <div class="row row-bottom-padded-sm">
                 <p class="text-center">
-                    <a href="terms-and-conditions.html" class="foot-link">Terms and Conditions</a>
-                    <a href="services-and-features.html" class="foot-link">Services / Features</a>
-                    <a href="blog.html" class="foot-link">Blog</a>
+                    <a href="/terms-and-conditions" class="foot-link">Terms and Conditions</a>
+                    <a href="/services-features" class="foot-link">Services / Features</a>
+                    <a href="/blog" class="foot-link">Blog</a>
                 </p>
             </div>
         </div>
