--- a/views/profile/pages/profile.html
+++ b/views/profile/pages/profile.html
@@ -24,54 +24,54 @@
     <div class="row row-timeline">
         <div class="col-md-3">
             <ul class="list-group">
-                <li class="list-group-item text-muted" contenteditable="false">Profile</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Joined</strong></span> 2.13.2014</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Last seen</strong></span> Yesterday</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real name</strong></span> Mahan
-                Pooya</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Role: </strong></span>CEO,CTO,COO,CFO
+                <li class="list-group-item">
+                    <h4>Profile</h4>
+                    <p>
+                        lorem ipsom
+                    </p>
                 </li>
             </ul>
-            <div class="panel panel-default">
-                <div class="panel-heading">active project
-
-                </div>
-                <div class="panel-body"><i style="color:green" class="fa fa-check-square">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Deeployer</i>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i>
-                </div>
-                <div class="panel-body"><a href="http://mahanhazrati.com" class="">Mahan Hazrati</a>
-                </div>
-            </div>
         </div>
         <div class="col-md-6">
-            <div class="well">
-                <form class="form-horizontal" role="form">
-                    <div class="form-group" style="padding:14px;">
-                        <textarea class="form-control" placeholder="first step of executing..."></textarea>
-                    </div>
-                    <button class="btn btn-success pull-right" type="button">Post</button>
-                    <ul class="list-inline">
-                        <li><a href="#"><i class="glyphicon glyphicon-align-left"></i></a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-align-center"></i></a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-align-right"></i></a></li>
-                    </ul>
-                </form>
-            </div>
+            <ul class="list-group">
+                <li class="list-group-item well">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group" style="padding:14px;">
+                            <textarea class="form-control" placeholder="first step of executing..."></textarea>
+                        </div>
+                        <button class="btn btn-success pull-right" type="button">Post</button>
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="glyphicon glyphicon-align-left"></i></a></li>
+                            <li><a href="#"><i class="glyphicon glyphicon-align-center"></i></a></li>
+                            <li><a href="#"><i class="glyphicon glyphicon-align-right"></i></a></li>
+                        </ul>
+                    </form>
+                </li>
+                <li class="list-group-item">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group" style="padding:14px;">
+                            <textarea class="form-control" placeholder="first step of executing..."></textarea>
+                        </div>
+                        <button class="btn btn-success pull-right" type="button">Post</button>
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="glyphicon glyphicon-align-left"></i></a></li>
+                            <li><a href="#"><i class="glyphicon glyphicon-align-center"></i></a></li>
+                            <li><a href="#"><i class="glyphicon glyphicon-align-right"></i></a></li>
+                        </ul>
+                    </form>
+                </li>
+            </ul>
         </div>
         <!-- right side -->
         <div class="col-md-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i>
-
-                </div>
-                <div class="panel-body"><a href="http://mahanhazrati.com" class="">Mahan Hazrati</a>
-
-                </div>
-            </div>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <h4>Trends</h4>
+                    <p>
+                        lorem ipsom
+                    </p>
+                </li>
+            </ul>
         </div>
     </div>
 
