--- a/assets/sass/app/profile/profile.scss
+++ b/assets/sass/app/profile/profile.scss
@@ -1,14 +1,28 @@
+$backgroundColor : #fdfdfd;
+$brand-body-color: #015;
+
+.navbar {
+    margin-bottom: 0px;
+}
 .row-timeline{
     padding: 20px;
+    color: $brand-body-color;
 }
 .timeline-cover {
     width: 100%;
-    height: 350px;
+    height: 400px;
     overflow: hidden;
     img {
         object-fit: cover;
         display: block;
         width: 100vw;
         height: 100vh;
+        background-color: $backgroundColor;
     }
+}
+
+.profile-avatar {
+    width:200px;
+    height:200px;
+    margin-top: -200px;
 }
